@@ -1,23 +1,21 @@
 package com.pennant.pff.lpp.service.impl;
 
-import java.math.BigDecimal;
 import java.util.ArrayList;
 import java.util.Date;
 import java.util.HashMap;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Map;
 
-import org.apache.commons.lang3.StringUtils;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
+import org.junit.platform.commons.util.StringUtils;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.transaction.TransactionDefinition;
+import org.springframework.jdbc.core.namedparam.MapSqlParameterSource;
 import org.springframework.transaction.TransactionStatus;
-import org.springframework.transaction.support.DefaultTransactionDefinition;
-import org.zkoss.util.resource.Labels;
 
 import com.pennant.app.util.SysParamUtil;
 import com.pennant.backend.dao.finance.FinanceMainDAO;
+import com.pennant.backend.dao.rmtmasters.FinanceTypeDAO;
 import com.pennant.backend.model.audit.AuditDetail;
 import com.pennant.backend.model.audit.AuditHeader;
 import com.pennant.backend.model.finance.FinODPenaltyRate;
@@ -25,105 +23,160 @@ import com.pennant.backend.model.finance.FinScheduleData;
 import com.pennant.backend.model.finance.FinanceDetail;
 import com.pennant.backend.model.finance.FinanceMain;
 import com.pennant.backend.model.lpp.upload.LPPUpload;
+import com.pennant.backend.model.rmtmasters.FinanceType;
 import com.pennant.backend.service.finance.FinanceMaintenanceService;
-import com.pennant.backend.util.FinanceConstants;
+import com.pennant.backend.service.rmtmasters.FinanceTypeService;
 import com.pennant.backend.util.PennantConstants;
-import com.pennant.eod.constants.EodConstants;
-import com.pennant.pff.lpp.PenaltyTypes;
 import com.pennant.pff.lpp.dao.LPPUploadDAO;
+import com.pennant.pff.lpp.upload.validate.LPPUploadProcessRecord;
 import com.pennant.pff.upload.model.FileUploadHeader;
 import com.pennant.pff.upload.service.impl.AUploadServiceImpl;
+import com.pennanttech.dataengine.model.DataEngineAttributes;
 import com.pennanttech.pennapps.core.AppException;
+import com.pennanttech.pennapps.core.model.LoggedInUser;
+import com.pennanttech.pennapps.core.resource.Literal;
 import com.pennanttech.pff.core.RequestSource;
+import com.pennanttech.pff.file.UploadTypes;
+import com.pennapps.core.util.ObjectUtil;
 
-public class LPPUploadServiceImpl extends AUploadServiceImpl {
+public class LPPUploadServiceImpl extends AUploadServiceImpl<LPPUpload> {
 	private static final Logger logger = LogManager.getLogger(LPPUploadServiceImpl.class);
 
 	private LPPUploadDAO lppUploadDAO;
 	private FinanceMainDAO financeMainDAO;
 	private FinanceMaintenanceService financeMaintenanceService;
-	private LppUploadValidateRecord lppUploadValidateRecord;
+	private FinanceTypeDAO financeTypeDAO;
+	private FinanceTypeService financeTypeService;
+	private LPPUploadProcessRecord lPPUploadProcessRecord;
+
+	public LPPUploadServiceImpl() {
+		super();
+	}
+
+	@Override
+	protected LPPUpload getDetail(Object object) {
+		if (object instanceof LPPUpload detail) {
+			return detail;
+		}
+
+		throw new AppException(IN_VALID_OBJECT);
+	}
 
 	@Override
 	public void doApprove(List<FileUploadHeader> headers) {
 		new Thread(() -> {
-
-			DefaultTransactionDefinition txDef = new DefaultTransactionDefinition(
-					TransactionDefinition.PROPAGATION_REQUIRES_NEW);
-			TransactionStatus txStatus = null;
-
 			Date appDate = SysParamUtil.getAppDate();
 
 			for (FileUploadHeader header : headers) {
 				logger.info("Processing the File {}", header.getFileName());
 
 				List<LPPUpload> details = lppUploadDAO.getDetails(header.getId());
-
+				header.getUploadDetails().addAll(details);
 				header.setAppDate(appDate);
-				header.setTotalRecords(details.size());
-				int sucessRecords = 0;
-				int failRecords = 0;
 
 				for (LPPUpload detail : details) {
 					doValidate(header, detail);
 
 					if (detail.getErrorCode() != null) {
-						detail.setProgress(EodConstants.PROGRESS_FAILED);
+						setFailureStatus(detail);
 					} else {
-						detail.setProgress(EodConstants.PROGRESS_SUCCESS);
-						detail.setErrorCode("");
-						detail.setErrorDesc("");
+						setSuccesStatus(detail);
 						detail.setUserDetails(header.getUserDetails());
-						setFinODPenaltyRateDate(detail);
-					}
-
-					if (detail.getProgress() == EodConstants.PROGRESS_FAILED) {
-						failRecords++;
-					} else {
-						sucessRecords++;
+						process(detail, header);
 					}
 				}
 
 				try {
-					header.setSuccessRecords(sucessRecords);
-					header.setFailureRecords(failRecords);
-
-					StringBuilder remarks = new StringBuilder("Process Completed");
-
-					if (failRecords > 0) {
-						remarks.append(" with exceptions, ");
-					}
-
-					remarks.append(" Total Records : ").append(header.getTotalRecords());
-					remarks.append(" Success Records : ").append(sucessRecords);
-					remarks.append(" Failed Records : ").append(failRecords);
-
-					logger.info("Processed the File {}", header.getFileName());
-
-					txStatus = transactionManager.getTransaction(txDef);
-
 					lppUploadDAO.update(details);
 
 					List<FileUploadHeader> headerList = new ArrayList<>();
 					headerList.add(header);
 					updateHeader(headers, true);
-
-					transactionManager.commit(txStatus);
 				} catch (Exception e) {
-					logger.error(ERROR_LOG, e.getCause(), e.getMessage(), e.getLocalizedMessage(), e);
-
-					if (txStatus != null) {
-						transactionManager.rollback(txStatus);
-					}
-				} finally {
-					txStatus = null;
+					logger.error(Literal.EXCEPTION, e);
 				}
 			}
-
 		}).start();
 	}
 
-	private void setFinODPenaltyRateDate(LPPUpload detail) {
+	private void process(LPPUpload detail, FileUploadHeader header) {
+		if (StringUtils.isBlank(detail.getReference())) {
+			processLoanType(detail, header);
+		} else {
+			processByFinRef(detail, header);
+		}
+
+	}
+
+	private void processLoanType(LPPUpload detail, FileUploadHeader header) {
+		FinanceType ft = financeTypeDAO.getFinanceTypeByID(detail.getLoanType(), "");
+		AuditHeader auditHeader = null;
+
+		if (PennantConstants.NO.equals(detail.getApplyOverDue())) {
+			ft.setODAllowWaiver(false);
+			ft.setODIncGrcDays(false);
+			ft.setApplyODPenalty(false);
+		} else {
+			ft.setApplyODPenalty(true);
+		}
+
+		if (PennantConstants.YES.equals(detail.getApplyOverDue())) {
+			ft.setODIncGrcDays(PennantConstants.YES.equals(detail.getIncludeGraceDays()));
+			ft.setODAllowWaiver(PennantConstants.YES.equals(detail.getAllowWaiver()));
+		}
+
+		ft.setODChargeType(detail.getPenaltyType());
+		ft.setODChargeAmtOrPerc(detail.getAmountOrPercent());
+		ft.setODChargeCalOn(detail.getCalculatedOn());
+		ft.setODGraceDays(detail.getGraceDays());
+		ft.setODMaxWaiverPerc(detail.getMaxWaiver());
+		ft.setOdMinAmount(detail.getODMinAmount());
+		ft.setRequestSource(RequestSource.UPLOAD);
+		LoggedInUser userDetails = detail.getUserDetails();
+
+		if (userDetails == null) {
+			userDetails = new LoggedInUser();
+			userDetails.setLoginUsrID(header.getApprovedBy());
+			userDetails.setUserName(header.getApprovedByName());
+		}
+
+		ft.setUserDetails(userDetails);
+		ft.setNewRecord(false);
+		ft.setRecordType(PennantConstants.RECORD_TYPE_UPD);
+		ft.setVersion(ft.getVersion() + 1);
+
+		auditHeader = getAuditHeader(ft, PennantConstants.TRAN_WF);
+		auditHeader.getAuditDetail().setModelData(ft);
+
+		TransactionStatus txStatus = getTransactionStatus();
+
+		try {
+			auditHeader = financeTypeService.doApprove(auditHeader);
+			transactionManager.commit(txStatus);
+		} catch (Exception e) {
+			if (txStatus != null) {
+				transactionManager.rollback(txStatus);
+			}
+
+			setFailureStatus(detail, e.getMessage());
+
+			return;
+		}
+
+		if (auditHeader == null) {
+			setFailureStatus(detail, "Audit Header is null.");
+			return;
+		}
+
+		if (auditHeader.getErrorMessage() != null) {
+			setFailureStatus(detail, auditHeader.getErrorMessage().get(0));
+		} else {
+			setSuccesStatus(detail);
+		}
+
+	}
+
+	private void processByFinRef(LPPUpload detail, FileUploadHeader header) {
 		FinODPenaltyRate pr = new FinODPenaltyRate();
 		FinanceDetail fd = new FinanceDetail();
 		FinScheduleData schdData = new FinScheduleData();
@@ -140,18 +193,10 @@ public class LPPUploadServiceImpl extends AUploadServiceImpl {
 		}
 
 		if (PennantConstants.YES.equals(detail.getApplyOverDue())) {
-			if (PennantConstants.NO.equals(detail.getIncludeGraceDays())) {
-				pr.setODIncGrcDays(false);
-			} else {
-				pr.setODIncGrcDays(true);
-			}
-
-			if (PennantConstants.NO.equals(detail.getAllowWaiver())) {
-				pr.setODAllowWaiver(false);
-			} else {
-				pr.setODAllowWaiver(true);
-			}
+			pr.setODIncGrcDays(PennantConstants.YES.equals(detail.getIncludeGraceDays()));
+			pr.setODAllowWaiver(PennantConstants.YES.equals(detail.getAllowWaiver()));
 		}
+
 		pr.setODChargeType(detail.getPenaltyType());
 		pr.setODChargeAmtOrPerc(detail.getAmountOrPercent());
 		pr.setODChargeCalOn(detail.getCalculatedOn());
@@ -161,15 +206,24 @@ public class LPPUploadServiceImpl extends AUploadServiceImpl {
 		pr.setFinID(finID);
 		pr.setFinEffectDate(SysParamUtil.getAppDate());
 		pr.setRequestSource(RequestSource.UPLOAD);
+		pr.setOdMinAmount(detail.getODMinAmount());
 
 		FinanceMain fm = financeMainDAO.getFinanceMainById(finID, "", false);
 
 		if (fm == null) {
-			setError(detail, LPPUploadError.LPP02);
+			setError(detail, LPPUploadError.LPP_02);
 			return;
 		}
 
-		fm.setUserDetails(detail.getUserDetails());
+		LoggedInUser userDetails = detail.getUserDetails();
+
+		if (userDetails == null) {
+			userDetails = new LoggedInUser();
+			userDetails.setLoginUsrID(header.getApprovedBy());
+			userDetails.setUserName(header.getApprovedByName());
+		}
+
+		fm.setUserDetails(userDetails);
 		fm.setNewRecord(false);
 		fm.setRecordType(PennantConstants.RECORD_TYPE_UPD);
 		fm.setVersion(fm.getVersion() + 1);
@@ -181,37 +235,51 @@ public class LPPUploadServiceImpl extends AUploadServiceImpl {
 		auditHeader = getAuditHeader(fd, PennantConstants.TRAN_WF);
 		auditHeader.getAuditDetail().setModelData(fd);
 
-		AuditHeader lppah = financeMaintenanceService.doApprove(auditHeader);
+		TransactionStatus txStatus = getTransactionStatus();
+		try {
+			auditHeader = financeMaintenanceService.doApprove(auditHeader);
+			transactionManager.commit(txStatus);
+		} catch (Exception e) {
+			if (txStatus != null) {
+				transactionManager.rollback(txStatus);
+			}
 
-		if (lppah.getErrorMessage() != null) {
-			detail.setProgress(EodConstants.PROGRESS_FAILED);
-			detail.setErrorDesc(lppah.getErrorMessage().get(0).getMessage().toString());
-			detail.setErrorCode(lppah.getErrorMessage().get(0).getCode().toString());
+			setFailureStatus(detail, e.getMessage());
+
+			return;
+		}
+
+		if (auditHeader == null) {
+			setFailureStatus(detail, "Audit Header is null.");
+			return;
+		}
+
+		if (auditHeader.getErrorMessage() != null) {
+			setFailureStatus(detail, auditHeader.getErrorMessage().get(0));
 		} else {
-			detail.setProgress(EodConstants.PROGRESS_SUCCESS);
-			detail.setErrorCode("");
-			detail.setErrorDesc("");
+			setSuccesStatus(detail);
 		}
 	}
 
 	@Override
 	public void doReject(List<FileUploadHeader> headers) {
-		List<Long> headerIdList = headers.stream().map(FileUploadHeader::getId).collect(Collectors.toList());
+		List<Long> headerIdList = headers.stream().map(FileUploadHeader::getId).toList();
 
-		DefaultTransactionDefinition txDef = new DefaultTransactionDefinition(
-				TransactionDefinition.PROPAGATION_REQUIRES_NEW);
-		TransactionStatus txStatus = null;
+		TransactionStatus txStatus = getTransactionStatus();
 		try {
-			txStatus = transactionManager.getTransaction(txDef);
 
-			lppUploadDAO.update(headerIdList, ERR_CODE, ERR_DESC, EodConstants.PROGRESS_FAILED);
+			headers.forEach(h1 -> {
+				h1.setRemarks(REJECT_DESC);
+				h1.getUploadDetails().addAll(lppUploadDAO.getDetails(h1.getId()));
+			});
 
-			headers.forEach(h1 -> h1.setRemarks(ERR_DESC));
+			lppUploadDAO.update(headerIdList, REJECT_CODE, REJECT_DESC);
+
 			updateHeader(headers, false);
 
 			transactionManager.commit(txStatus);
 		} catch (Exception e) {
-			logger.error(ERROR_LOG, e.getCause(), e.getMessage(), e.getLocalizedMessage(), e);
+			logger.error(Literal.EXCEPTION, e);
 
 			if (txStatus != null) {
 				transactionManager.rollback(txStatus);
@@ -221,204 +289,12 @@ public class LPPUploadServiceImpl extends AUploadServiceImpl {
 
 	@Override
 	public void doValidate(FileUploadHeader header, Object object) {
-		LPPUpload detail = null;
-
-		if (object instanceof LPPUpload) {
-			detail = (LPPUpload) object;
-		}
-
-		if (detail == null) {
-			throw new AppException("Invalid Data transferred...");
-		}
-
-		String reference = detail.getReference();
-
-		logger.info("Validating the Data for the reference {}", reference);
-
-		detail.setHeaderId(header.getId());
-
-		Long finID = financeMainDAO.getFinID(reference);
-		detail.setReferenceID(finID);
-
-		String loanType = detail.getLoanType();
-
-		if (StringUtils.isBlank(reference) && StringUtils.isBlank(loanType)) {
-			setError(detail, LPPUploadError.LPP01);
-			return;
-		}
-
-		if (StringUtils.isNotBlank(reference) && finID == null) {
-			setError(detail, LPPUploadError.LPP02);
-			return;
-		}
-
-		if (StringUtils.isNotBlank(reference)) {
-			FinanceMain fm = financeMainDAO.getFinanceMain(reference, header.getEntityCode());
-
-			if (StringUtils.isNotBlank(reference) && fm == null) {
-				setError(detail, LPPUploadError.LPP02);
-				return;
-			}
-
-			if (StringUtils.isNotBlank(reference) && !fm.isFinIsActive()) {
-				setError(detail, LPPUploadError.LPP12);
-				return;
-			}
-
-			if (StringUtils.isNotBlank(loanType) && !fm.getFinType().equals(loanType)) {
-				setError(detail, LPPUploadError.LPP13);
-				return;
-			}
-
-			String rcdMntnSts = financeMainDAO.getFinanceMainByRcdMaintenance(finID);
-			if (StringUtils.isNotEmpty(rcdMntnSts)) {
-				detail.setProgress(EodConstants.PROGRESS_FAILED);
-				detail.setErrorCode("LPP_999");
-				detail.setErrorDesc(Labels.getLabel("Finance_Inprogresss_" + rcdMntnSts));
-				return;
-			}
-		}
-
-		String existingLoans = detail.getApplyToExistingLoans();
-		if (StringUtils.isNotBlank(loanType) && StringUtils.isBlank(reference)
-				&& !(PennantConstants.NO.equals(existingLoans) || PennantConstants.YES.equals(existingLoans))) {
-			setError(detail, LPPUploadError.LPP14);
-			return;
-		}
-
-		if (StringUtils.isNotBlank(detail.getReference()) && StringUtils.isNotBlank(existingLoans)) {
-			setError(detail, LPPUploadError.LPP17);
-			return;
-		}
-
-		if (StringUtils.isBlank(detail.getApplyOverDue())) {
-			setError(detail, LPPUploadError.LPP03);
-			return;
-		}
-
-		boolean applyOverDue = PennantConstants.YES.equals(detail.getApplyOverDue());
-		if (!(PennantConstants.NO.equals(detail.getApplyOverDue()) || applyOverDue)) {
-			setError(detail, LPPUploadError.LPP04);
-			return;
-		}
-
-		String penaltyType = detail.getPenaltyType();
-		BigDecimal amountOrPercent = detail.getAmountOrPercent();
-		String calculatedOn = detail.getCalculatedOn();
-
-		BigDecimal maxWaiver = detail.getMaxWaiver();
-
-		if (maxWaiver == null) {
-			maxWaiver = BigDecimal.ZERO;
-		}
-
-		if (amountOrPercent == null) {
-			amountOrPercent = BigDecimal.ZERO;
-		}
-
-		if (PennantConstants.NO.equals(detail.getApplyOverDue())
-				&& (StringUtils.isNotBlank(reference) || StringUtils.isNotBlank(loanType))) {
-			if (StringUtils.isNotBlank(calculatedOn) || (StringUtils.isNotBlank(detail.getIncludeGraceDays()))
-					|| (StringUtils.isNotBlank(penaltyType)) || StringUtils.isNotBlank(detail.getAllowWaiver())
-					|| (maxWaiver.compareTo(BigDecimal.ZERO)) > 0 || detail.getGraceDays() > 0
-					|| amountOrPercent.compareTo(BigDecimal.ZERO) > 0) {
-				setError(detail, LPPUploadError.LPP09);
-				return;
-			}
-		}
-
-		if (PennantConstants.YES.equals(detail.getApplyOverDue())) {
-			boolean allowWaiver = PennantConstants.YES.equals(detail.getAllowWaiver());
-			boolean includeGraceDays = PennantConstants.YES.equals(detail.getIncludeGraceDays());
-
-			if (!(PennantConstants.NO.equals(detail.getAllowWaiver()) || allowWaiver)) {
-				setError(detail, LPPUploadError.LPP20);
-				return;
-			}
-
-			if (!(PennantConstants.NO.equals(detail.getIncludeGraceDays()) || includeGraceDays)) {
-				setError(detail, LPPUploadError.LPP19);
-				return;
-			}
-
-			if (includeGraceDays && (detail.getGraceDays() < 0 || detail.getGraceDays() > 999)) {
-				setError(detail, LPPUploadError.LPP15);
-				return;
-			}
-
-			if (allowWaiver && StringUtils.isBlank(String.valueOf(maxWaiver))) {
-				setError(detail, LPPUploadError.LPP18);
-				return;
-			} else if (allowWaiver
-					&& (maxWaiver.compareTo(BigDecimal.ZERO) <= 0 || maxWaiver.compareTo(new BigDecimal(100)) > 0)) {
-				setError(detail, LPPUploadError.LPP10);
-				return;
-			}
-
-			if (StringUtils.isNotBlank(String.valueOf(maxWaiver))) {
-				if (!allowWaiver && maxWaiver.compareTo(BigDecimal.ZERO) > 0) {
-					setError(detail, LPPUploadError.LPP11);
-					return;
-				}
-			}
-
-			PenaltyTypes lppType = PenaltyTypes.getTypes(penaltyType);
-
-			if (lppType == null) {
-				setError(detail, LPPUploadError.LPP05);
-				return;
-			}
-
-			switch (lppType) {
-			case FLAT:
-			case FLAT_ON_PD_MTH:
-				amountOrPercent = amountOrPercent.divide(new BigDecimal(100));
-				if ((amountOrPercent.compareTo(BigDecimal.ZERO)) < 0
-						|| (amountOrPercent.compareTo(new BigDecimal(9999999)) > 0)) {
-					setError(detail, LPPUploadError.LPP07);
-					return;
-				}
-
-				if (StringUtils.isNotBlank(calculatedOn)) {
-					setError(detail, LPPUploadError.LPP22);
-					return;
-				}
-
-				break;
-			case PERC_ONE_TIME:
-			case PERC_ON_PD_MTH:
-			case PERC_ON_DUE_DAYS:
-			case PERC_ON_EFF_DUE_DAYS:
-				amountOrPercent = amountOrPercent.divide(new BigDecimal(100));
-				if ((amountOrPercent.compareTo(BigDecimal.ZERO)) <= 0
-						|| (amountOrPercent.compareTo(new BigDecimal(100)) > 0)) {
-					setError(detail, LPPUploadError.LPP08);
-					return;
-				}
-
-				if (StringUtils.isBlank(calculatedOn)) {
-					setError(detail, LPPUploadError.LPP23);
-					return;
-				}
-
-				if (!(FinanceConstants.ODCALON_STOT.equals(calculatedOn)
-						|| FinanceConstants.ODCALON_SPRI.equals(calculatedOn)
-						|| FinanceConstants.ODCALON_SPFT.equals(calculatedOn))) {
-					setError(detail, LPPUploadError.LPP06);
-					return;
-				}
-
-				break;
-			default:
-				break;
-			}
-		}
+		LPPUpload detail = getDetail(object);
+		lPPUploadProcessRecord.validate(header, detail);
 	}
 
 	private void setError(LPPUpload detail, LPPUploadError error) {
-		detail.setProgress(EodConstants.PROGRESS_FAILED);
-		detail.setErrorCode(error.name());
-		detail.setErrorDesc(error.description());
+		setFailureStatus(detail, error.name(), error.description());
 	}
 
 	private AuditHeader getAuditHeader(FinanceDetail afinanceDetail, String tranType) {
@@ -428,8 +304,51 @@ public class LPPUploadServiceImpl extends AUploadServiceImpl {
 	}
 
 	@Override
+	public void uploadProcess() {
+		uploadProcess(UploadTypes.LPP_LOAN.name(), this, "LPPLoanUploadHeader");
+	}
+
+	@Override
+	public void uploadProcess(String type) {
+		if (type.equals(UploadTypes.LPP_LOAN_TYPE.name())) {
+			uploadProcess(UploadTypes.LPP_LOAN_TYPE.name(), lPPUploadProcessRecord, this, "LPPLoanTypeUploadHeader");
+		} else {
+			uploadProcess(UploadTypes.LPP_LOAN.name(), this, "LPPLoanUploadHeader");
+		}
+	}
+
+	@Override
 	public String getSqlQuery() {
 		return lppUploadDAO.getSqlQuery();
+	}
+
+	@Override
+	public LPPUploadProcessRecord getProcessRecord() {
+		return lPPUploadProcessRecord;
+	}
+
+	@Override
+	public void validate(DataEngineAttributes attributes, MapSqlParameterSource paramSource) throws Exception {
+		logger.debug(Literal.ENTERING);
+
+		LPPUpload detail = (LPPUpload) ObjectUtil.valueAsObject(paramSource, LPPUpload.class);
+
+		detail.setReference(ObjectUtil.valueAsString(paramSource.getValue("finReference")));
+
+		Map<String, Object> parameterMap = attributes.getParameterMap();
+
+		FileUploadHeader header = (FileUploadHeader) parameterMap.get("FILE_UPLOAD_HEADER");
+
+		detail.setHeaderId(header.getId());
+		detail.setAppDate(header.getAppDate());
+
+		doValidate(header, detail);
+
+		updateProcess(header, detail, paramSource);
+
+		header.getUploadDetails().add(detail);
+
+		logger.debug(Literal.LEAVING);
 	}
 
 	@Autowired
@@ -443,18 +362,28 @@ public class LPPUploadServiceImpl extends AUploadServiceImpl {
 	}
 
 	@Autowired
+	public void setFinanceTypeDAO(FinanceTypeDAO financeTypeDAO) {
+		this.financeTypeDAO = financeTypeDAO;
+	}
+
+	@Autowired
+	public void setFinanceTypeService(FinanceTypeService financeTypeService) {
+		this.financeTypeService = financeTypeService;
+	}
+
+	@Autowired
 	public void setFinanceMaintenanceService(FinanceMaintenanceService financeMaintenanceService) {
 		this.financeMaintenanceService = financeMaintenanceService;
 	}
 
-	@Override
-	public LppUploadValidateRecord getValidateRecord() {
-		return lppUploadValidateRecord;
+	@Autowired
+	public void setlPPUploadProcessRecord(LPPUploadProcessRecord lPPUploadProcessRecord) {
+		this.lPPUploadProcessRecord = lPPUploadProcessRecord;
 	}
 
-	@Autowired
-	public void setLppUploadValidateRecord(LppUploadValidateRecord lppUploadValidateRecord) {
-		this.lppUploadValidateRecord = lppUploadValidateRecord;
+	private AuditHeader getAuditHeader(FinanceType financetype, String tranType) {
+		AuditDetail auditDetail = new AuditDetail(tranType, 1, financetype.getBefImage(), financetype);
+		return new AuditHeader(null, null, null, null, auditDetail, financetype.getUserDetails(), new HashMap<>());
 	}
 
 }
